Comparison Part 1
Co-Authored-By: Sedat Nail Ersoy <93867521+Ellaedrieth@users.noreply.github.com>
Co-Authored-By: aycadernek <121360043+aycadernek@users.noreply.github.com>